[package]
name = "dnsfilter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "time",
] }
clap = { version = "4.5.20", features = ["derive"] }
qfilter = { version = "0.2.1" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
